fixed all issues with overflow and backgr, zing!

--- a/styles.css
+++ b/styles.css
@@ -427,6 +427,12 @@ section{
   opacity: 1;
 }
 
+.all-contact{
+  background: url(./images/all-backg.png) no-repeat;
+  background-size: cover;
+  background-position: center; 
+}
+
 .contact .row{
   display: flex;
   align-items: center;
